Fix responsiveness on tablet content container

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,7 @@ body,
 #root {
   margin: 0;
   height: 100%;
+  background-color: #f3faf7;
 }
 
 html.dark,
